Funções de in/out de serialização + Nova classe DFONode para a Inês armazenar as DFOs :D