@@ -7,31 +7,30 @@ Não é na pasta src, é na pasta acima.
 fmd
 */
 import java.io.*;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
+import java.util.*;
 
 public class Sample implements Serializable {
 
-    private ArrayList<int []> lista; // Lista de Samples
-    private int [] domain = null;    // Array de domínios, deve ser actualizado no método add.
+    private HashMap<Integer, Integer[]> lista; // Lista de Samples
+    private int len = 0;
+    private Integer[] domain = null;    // Array de domínios, deve ser actualizado no método add.
 
 
     public Sample() {
-        this.lista = new ArrayList<int []>();
+        this.lista = new HashMap<>();
     }
 
-    static int[] convert (String line) {
+    static Integer[] convert (String line) {
         String csvSplitBy = ",";
         String[] strings     = line.split(csvSplitBy);
-        int[] stringToIntVec = new int[strings.length];
+        Integer[] stringToIntVec = new Integer[strings.length];
         for (int i = 0; i < strings.length; i++)
             stringToIntVec[i] = Integer.parseInt(strings[i]);
         return stringToIntVec;
     }
 
     public Sample(String csvFile) {
-        this.lista = new ArrayList<int []>();
+        this.lista = new HashMap<>();
         this.domain = null;
         BufferedReader br = null;
         String line = "";
@@ -57,7 +56,7 @@ public class Sample implements Serializable {
         }
     }
 
-    public void add (int[] v){
+    public void add (Integer[] v){
         //Para atualizar os domínios - confirmar se está bem
         if (domain == null) {
             // Se os domínios ainda não foram inicializados, inicialize-os com os valores do primeiro vetor
@@ -68,34 +67,38 @@ public class Sample implements Serializable {
                 domain[i]=v[i]+1;
             }
         }
-        lista.add(v);
+        lista.put(this.len, v);
+        this.len+=1;
     }
 
     public int no_features() {
-        return lista.getFirst().length;
+        return lista.get(0).length;
     }
 
     public int length (){
         return lista.size();
     }
 
-    public int[] element (int i){
+    public Integer[] element (int i){
         return lista.get(i);
     }
 
     public int count(List<Integer> var, List<Integer> val) { //Falta testar
+
         int r = 0;
         if (var.size() != val.size()) {
             return r; // Retorna 0 se os comprimentos são diferentes
         }
+
         // Iterar sobre cada vetor dentro da lista de Samples
         // Obter o vetor de Sample atual
-        for (int[] sample : lista) {
+        for (int i = 0; i < len; i++) {
+            Integer[] sample = lista.get(i);
             boolean match = true;
             // Verificar se os valores em 'sample' correspondem aos valores em 'val' nas posições 'var'
             for (int j = 0; j < var.size(); j++) {
                 // Verifica se a posição dada por var[j] é válida
-                if (var.get(j) >= sample.length || sample[var.get(j)] != val.get(j)) {
+                if (var.get(j) >= sample.length || !Objects.equals(sample[var.get(j)], val.get(j))) {
                     match = false;
                     break; // Não é uma correspondência, não precisa verificar mais
                 }
@@ -130,7 +133,7 @@ public class Sample implements Serializable {
     @Override
     public String toString() {
         StringBuilder s= new StringBuilder("\n[\n");
-        if (!lista.isEmpty()) s.append(Arrays.toString(lista.getFirst()));
+        if (!lista.isEmpty()) s.append(Arrays.toString(lista.get(0)));
         for (int i=1; i<lista.size();i++)
             s.append("\n").append(Arrays.toString(lista.get(i)));
         s.append("\n]");
